# microruby-esp32

./: CMakeLists.txt  microruby-esp32.c  microruby-esp32.h
mrblib/: main_task.rb
